# powerls

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
debian/: changelog  control  rules
packaging/arch/powerls/: .SRCINFO  PKGBUILD  README.md
packaging/scripts/: build-deb.sh
src/: main.cpp
